<package>
  <name>ezgripper_control</name>
  <version>0.1.0</version>
  <description>ezgripper_control</description>
  <maintainer email="paul.ekas@sakerobotics.com">Paul Ekas</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="paul.ekas@sakerobotics.com">Paul Ekas</author>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
